# stuff

./: Baldosas_backtracking.java  Distances  MaxPrimeFactor.py  README.md  Vandermonde.py  arbolN.hs
Baldosas/: Baldosas_backtracking.java  Baldosas_voraz.java
Baldosas/Utilidades/: MatricesOperaciones.java  leer.java
CambioMonedas/: CambioMonedas.java
cpp/3raya/: Ficha.cpp  Ficha.h  Jugador.cpp  Jugador.h  Partida.cpp  Partida.h  Tablero.cpp  Tablero.h  a.out  main.cpp
cpp/cola/: Makefile  cola  cola.cpp
cpp/eficiencia/: Makefile  a.out  eficicencias.cpp  test  test.sh
cpp/ejercicio_1/: a.out
cpp/intercalar/: a.out  intercalar.cpp  (+1 more)
haskell/: binGenTree.hs  haskell.hs  saco.hs
notebooks/: Agents_Kaggle.ipynb  analysis.ipynb  lstm-keras.ipynb
processing/: LifeGame.pde  MyPaint.pde  PI_aproximation.pde  Pong  Pong.pde
python/: distances.py  github_scrapper.py  grid_policy_iteration.py  largest_product.py  maxPrimeFactor.py  mult-diagonals.py  plot_compare_progress.py  plot_evals_html.py  plot_evals_png.py  pythagorean.py  rl_agent_deploy.py  rl_shap_analysis.ipynb  run_sinergym.py  sum-primes.py  sum_primes.py  td3_agent_train.py  value_iteration.py  weather_comparison.ipynb  weather_tests.py
python/pytorch/: 00_tensors.ipynb  01_datasets.ipynb  02_transforms.ipynb  03_neural_net.ipynb  04_autograd.ipynb  05_optimization.ipynb  06_save_load.ipynb  dqn.ipynb  pyproject.toml  requirements.txt
r/: distribs.R  plots-sinergym.r
typescript/: overview.ts
typst/: bibliography.bib  file_1.typ  file_2.typ  file_3.typ  file_4.typ  file_5.typ  file_6.typ
(+126 files in other folders)
