[tool.poetry]
name = "pytorch-course"
version = "0.1.0"
description = ""
authors = ["Antonio <antomanjavacas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
numpy = "^2.2.3"
torchvision = "^0.21.0"
matplotlib = "^3.10.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
